1.4.5.0/_sources/Reference/NodeReference/GafferImage/Catalogue.md.txt
Catalogue
=========

Stores a catalogue of images to be browsed. Images can either be loaded
from files or rendered directly into the catalogue.

To send a live render to a Catalogue, an "ieDisplay" output definition
should be used with the following parameters :

- driverType : "ClientDisplayDriver"
- displayHost : host name ("localhost" is sufficient for local renders)
- displayPort : `GafferImage.Catalogue.displayDriverServer().portNumber()`
- remoteDisplayType : "GafferImage::GafferDisplayDriver"
- catalogue:name : The name of the catalogue to render to (optional)

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output image generated by this node.

enabled
-------

Turns the node on and off.

images
------

Specifies the list of images currently
stored in the catalogue.

Either add images interactively
using the UI, or use the API to construct
Catalogue.Image plugs and parent them
here.

imageIndex
----------

Specifies the index of the currently
selected image. This forms the output
from the catalogue node.

name
----

Used to distinguish between catalogues, so that when
multiple catalogues exist, it is possible to send a
render to just one of them. Renders are matched
to catalogues by comparing the "catalogue:name" parameter
from the renderer output with the value of this plug.

directory
---------

The directory where completed renders
are saved. This allows them to remain
in the catalogue for the next session.

imageNames
----------

Output containing all the names of the images in the Catalogue.
Possible uses include :

- Looping over all images using a Wedge and a CatalogueSelect.
- Making a ContactSheet using the Collect mode and a CatalogueSelect.